<resources>
    <string name="app_name" translatable="false">YaKa</string>
    <string name="logoyaka" translatable="false">logoYaKa</string>
    <string name="training_home_button">TRAINING</string>
    <string name="learning_home_button">LEARNING</string>
    <string name="home_presentation_text">Welcome on YaKa, your Japanese learning assistant !</string>
    <string name="learning_hiragana_button" translatable="false">HIRAGANA</string>
    <string name="learning_katakana_button" translatable="false">KATAKANA</string>
    <string name="learning_hiragana_title">HIRAGANA TABLE</string>
    <string name="learning_hiragana_add_button">ADD HIRAGANA</string>
    <string name="help_for_add_hiragana">Add Hiragana in the following line order :  A I U E O \n e.g : KA KI KU KE KO</string>
    <string name="learning_hiragana_add_line_create_button">CREATE</string>
    <string name="learning_hiragana_add_line_title">Add a new line</string>
    <string name="base_kana" translatable="false">base_kana</string>
    <string name="details" translatable="false">DETAILS</string>
    <string name="learning_hiragana_edit_save_button">SAVE</string>
    <string name="learning_hiragana_edit_delete_button">DELETE</string>
    <string name="edit_image" translatable="false">edit_image</string>
</resources>
